ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: citrineos-ingress
  namespace: citrinos
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx # 👈 This is the correct way now
  tls:
  - hosts:
    - dashboard.ev.vossmoos.com
    - everest.ev.vossmoos.com
    secretName: citrinos-private-key
  rules:
  - host: "dashboard.ev.vossmoos.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: directus
            port:
              number: 8055
  - host: ""
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-kubernetes-second
            port:
              number: 80
  - host: "everest.ev.vossmoos.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nodered
            port:
              number: 1880
